# turtleneck-bevy

./: Cargo.toml  README.md  learning_vim.md
assets/: Avocado.glb
assets/turtle/: Turtle.gltf
src/: game.rs  main.rs
src/components/: camera.rs  gamelayer.rs  gamestate.rs  health.rs  mod.rs  player.rs
src/plugins/: camera.rs  cutscene.rs  input.rs  inventory.rs  level.rs  mod.rs  player.rs  shooting.rs  world.rs  world_switching.rs
