[package]
name = "learning-bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.1", features = ["dynamic_linking"] }
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
avian2d = {version = "0.2"}
bevy-inspector-egui = "0.29.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
